<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mainFragment">

    <TextView
        android:id="@+id/welcomeMes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:gravity="center_horizontal"
        android:text="@string/tittle"
        android:textSize="40pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/creationButton"
        android:layout_width="410dp"
        android:layout_height="94dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/flashcard_creation"
        android:textSize="20pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeMes" />

    <Button
        android:id="@+id/allFlashcards"
        android:layout_width="410dp"
        android:layout_height="94dp"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="@string/all_flashcards"
        android:textSize="20pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/creationButton" />

    <Button
        android:id="@+id/studyButton"
        android:layout_width="197dp"
        android:layout_height="81dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/study"
        android:textSize="15pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/quizButton"
        app:layout_constraintTop_toBottomOf="@+id/allFlashcards" />

    <Button
        android:id="@+id/quizButton"
        android:layout_width="197dp"
        android:layout_height="81dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/quiz"
        android:textSize="15pt"
        app:layout_constraintEnd_toStartOf="@+id/studyButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/allFlashcards" />

</androidx.constraintlayout.widget.ConstraintLayout>