<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreationFragment">


    <TextView
        android:id="@+id/titleText"
        android:layout_width="392dp"
        android:layout_height="64dp"
        android:text="@string/creationTittle"
        android:textSize="20pt"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="112dp"
        android:layout_height="36dp"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="@string/question"
        android:textSize="10pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleText" />

    <EditText
        android:id="@+id/question"
        android:layout_width="414dp"
        android:layout_height="66dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/quesHint"
        android:inputType="text"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="97dp"
        android:layout_height="33dp"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="@string/answer"
        android:textSize="10pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.003"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question" />

    <EditText
        android:id="@+id/answer"
        android:layout_width="409dp"
        android:layout_height="67dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/ansHInt"
        android:inputType="text"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/submit"
        android:layout_width="394dp"
        android:layout_height="84dp"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:text="@string/finish"
        android:textSize="20pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/button"
        android:layout_width="145dp"
        android:layout_height="62dp"
        android:gravity="center"
        android:text="@string/next"
        android:textSize="15pt"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answer" />

    <TextView
        android:id="@+id/currentPairTextView"
        android:layout_width="418dp"
        android:layout_height="79dp"
        android:gravity="center"
        android:text=""
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submit" />

    <TextView
        android:id="@+id/totalCards"
        android:layout_width="196dp"
        android:layout_height="38dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="TextView"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentPairTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>